--- a/components/SigninForm.module.css
+++ b/components/SigninForm.module.css
@@ -1,8 +1,9 @@
 .authForm {
   display: flex;
+  margin: 30px 0 32px;
   flex-direction: column;
   align-items: center;
-  gap: 30px;
+  gap: 24px;
 }
 
 .inputGroup {
