--- a/components/SinginForm/SinginForm.module.scss
+++ b/components/SinginForm/SinginForm.module.scss
@@ -10,7 +10,6 @@
     font-size: 16px;
     padding: 18px 15px;
     border-radius: 8px;
-    border: 1px solid var(--Linkbrary-gray20, #ccd5e3);
     background: var(--Linkbrary-white, #fff);
   }
 
@@ -51,4 +50,12 @@
   position: absolute;
   right: 15px;
   top: 53px;
+}
+
+.red-border {
+  border: 1px solid red;
+}
+
+.default-border {
+  border: 1px solid var(--Linkbrary-gray20, #ccd5e3);
 }
