--- a/styles/singin.module.scss
+++ b/styles/singin.module.scss
@@ -4,7 +4,14 @@
   align-items: center;
   gap: 30px;
   width: 400px;
-  margin: 238px auto;
+  margin: 0 auto;
+}
+
+.page-container {
+  width: 100%;
+  height: 100vh;
+  background-color: #f0f6ff;
+  padding: 230px;
 }
 
 .title {
